# small-jvm

./: CMakeLists.txt  main.cpp  test.cpp  vm.cpp  vm_gc_test.cpp  vm_interface.h
gc/: gc.h
memalloc/: address.h  block.h  gc_info.h  memory.h  size.h
